1993-11-05  dickey@software.org

	* src/Makefile, src/ded.h: absorbed:cmdch.h

1993-11-01  dickey@software.org

	* src/README: to-do list from HP/UX port

	* src/dedname.c: allow directory-rename for HP/UX (Sys5.4)

	* src/ded.c: hacks to cleanup repainting on HP/UX

1993-10-29  dickey@software.org

	* src/dedfind.c, src/dedread.c, src/dedring.c, src/dedscan.c, src/dedshow.c, src/dedtype.c, src/dedview.c, src/ftree.c:
	HP/UX-port

	* src/ded2s.c, src/deddoit.c, src/deddump.c, src/dedfree.c: ifdef-ident

1993-10-29  Thomas E. Dickey  <dickey@software.org>

	* src/dedfree.c: use MODULE_ID

1993-10-29  dickey@software.org

	* src/dedline.c, src/dedmake.c, src/dedmsgs.c, src/dedname.c, src/dedsigs.c, src/dedsort.c, src/dedtags.c, src/deduniq.c, src/dedwait.c, src/dlog.c, src/history.c, src/inline.c, src/restat.c, src/showpath.c, src/sortset.c, src/ded.c:
	ifdef-ident

	* src/ded.h: HP/UX-port

1993-09-28  dickey@software.org

	* src/sortset.c: gcc warnings

	* src/dedline.c: redundant SIZEOF definition

	* src/ftree.c: gcc warnings

	* src/ded.h: tweaks for apollo sr10.3

	* src/inline.c: lint

	* src/version.h: gcc warnings

	* src/dlog.c, src/ftree.c, src/history.c, src/inline.c, src/showpath.c, src/dedsigs.c, src/dedtype.c, src/deduniq.c, src/dedview.c, src/dedname.c, src/dedring.c, src/dedscan.c, src/dedshow.c, src/ded2s.c, src/dedfind.c, src/dedline.c, src/dedmsgs.c, src/ded.c, src/deddoit.c, src/dedsort.c, src/sortset.c:
	log-comment:gcc-warnings

1993-09-24  dickey@software.org

	* certify/release.txt, certify/config.txt: gcc-warnings

1993-09-21  dickey@software.org

	* src/Makefile: use LINK symbol
	added tags rule
	clobber ded.a

	* src/ded.h, src/sortset.c, src/showpath.c, src/inline.c, src/history.c, src/ftree.c, src/dedsort.c, src/dlog.c, src/dedtype.c, src/deduniq.c, src/dedview.c, src/dedsigs.c, src/dedshow.c, src/dedscan.c, src/dedring.c, src/dedname.c, src/dedmsgs.c, src/dedline.c, src/dedfind.c, src/ded2s.c, src/deddoit.c, src/ded.c:
	gcc-warnings
